--- a/css/Style.css
+++ b/css/Style.css
@@ -148,7 +148,8 @@ oz {
 .section-1 .row .col-md-6 .panel {
 
     position: absolute;
-
+    top: 5vmin;
+    left: -18vmin;
     background: rgb(255, 255, 255);
     border-radius: 2em;
     text-align: center;
